5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1798_2563.log
== TEST (2019-06-10 14:28:15) 
-- CODE:
v=eval(array(input()))

a=0

for elemento in v:
	if (elemento =>5) and (elemento=<7):
		a=a+1
		
print(a)
-- ERROR:
File "XXXX", line 6
    if (elemento =>5) and (elemento=<7):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:28:27) 
-- CODE:
v=eval(array(input()))

a=0

for elemento in v:
	if (elemento >= 5) and (elemento=<7):
		a=a+1
		
print(a)
-- ERROR:
File "XXXX", line 6
    if (elemento >= 5) and (elemento=<7):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:28:38) 
-- CODE:
v=eval(array(input()))

a=0

for elemento in v:
	if (elemento >= 5) and (elemento <= 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v=eval(array(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:29:05) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento >= 5) and (elemento <= 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:43) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento >= 7):
		a=a+1
		if ()
		
print(a)
-- ERROR:
File "XXXX", line 10
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:48) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento >= 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:29) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:42) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- EXECUTION TIME:
1.14251
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:49) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:51) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:56) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- EXECUTION TIME:
1.84228
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:57) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- EXECUTION TIME:
3.01312
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:58) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	if (elemento > 7):
		a=a+1
		
print(a)
-- EXECUTION TIME:
3.33022
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:08) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

for elemento in v:
	while (size(vet > 1)):
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:01) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(vet > 1)):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:03) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(vet > 1)):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:05) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(vet > 1)):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:35:06) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(vet > 1)):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- EXECUTION TIME:
1.07193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 7, in <module>
    while (size(vet > 1)):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:35:08) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(vet > 1)):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- EXECUTION TIME:
2.251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2563/main.py", line 7, in <module>
    while (size(vet > 1)):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:39) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:07) 
-- CODE:
from numpy import*

v=array(eval(input()))

a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:51) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:53) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:37:04) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento > 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:38:37) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento >= 7):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:39:59) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento <= 7) and (elemento >=5):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:43:59) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:46:03) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
	v=array(eval(input()))	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:47:01) 
-- CODE:
from numpy import*

v=array(eval(input()))
a=0

while (size(v) > 1):
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
			print(a)
	v=array(eval(input()))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:47:35) 
-- CODE:
from numpy import*

v=array(eval(input()))

while (size(v) > 1):
	a=0
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
			print(a)
	v=array(eval(input()))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:47:57) 
-- CODE:
from numpy import*

v=array(eval(input()))

while (size(v) > 1):
	a=0
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
print(a)
	v=array(eval(input()))	
-- ERROR:
File "XXXX", line 11
    v=array(eval(input()))	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:48:06) 
-- CODE:
from numpy import*

v=array(eval(input()))

while (size(v) > 1):
	a=0
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
		print(a)
	v=array(eval(input()))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:48:42) 
-- CODE:
from numpy import*

v=array(eval(input()))

while (size(v) > 1):
	a=0
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
	print(a)
	v=array(eval(input()))	
-- EXECUTION TIME:
1.19821
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:48:57) 
-- CODE:
from numpy import*

v=array(eval(input()))

while (size(v) > 1):
	a=0
	for elemento in v:
		if (elemento < 7) and (elemento >=5):
			a=a+1
	print(a)
	v=array(eval(input()))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
